# spartsi

./: .codeclimate.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
src/: elementary-types.h  elementary_types.h  example-function.h  unparse.cpp  unparse.h
src/utensils/: history_keeping_map.h
test/: elementary-types.cpp  elementary_types_test.cpp  example_test.cpp  main.cpp  unparse_test.cpp
test/utensils/: history_keeping_map_test.cpp
